# Test_QA

./: .gitignore  DESIGN.md  FIXES.md  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup_dev.py
Ammeters/: base_ammeter.py
config/: test_config.yaml
examples/: __init__.py  ammeter_comparison.py  error_simulation_demo.py  run_emulators.py  run_tests.py
src/: __init__.py
src/test_qa/ammeters/: __init__.py  base_ammeter.py  circutor_ammeter.py  client.py  entes_ammeter.py  greenlee_ammeter.py
src/test_qa/testing/: data_collector.py  error_simulator.py  result_analyzer.py  test_framework.py  visualizer.py
src/test_qa/utils/: config.py
src/testing/: data_collector.py  error_simulator.py  result_analyzer.py  test_framework.py
src/utils/: ammeter_comparison.py
tests/: test_cases.py
