[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-qa"
version = "0.1.0"
description = "Ammeter Testing Framework"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "pandas>=1.3.0",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["test_qa*"]
